+ Ajout thread pour récupérer la position avec fonction de callback

--- a/AfficheurGPS/WaitingGPS.html
+++ b/AfficheurGPS/WaitingGPS.html
@@ -3,10 +3,13 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>Attendez SVP</title>
 </head>
 <body>
-	<h1>En attente du signal GPS</h1>
-	<h3>(Ceci prend en moyenne 30 secondes au démarrage du GPS)</h3>
+	<div class="wrapper" style="text-align:center;position:absolute;margin:0;top:50%;left:50%;-ms-transform: translate(-50%, -50%);transform: translate(-50%, -50%);">
+		<h1>En attente du signal GPS</h1>
+		<h3>Ceci prend en moyenne 30 secondes au démarrage du GPS</h3>
+		<p>Vous pouvez jeter un coup d'oeil à la console pour suivre l'évolution du chargement.</p>
+	</div>
 </body>
 </html>
